@@ -1,8 +1,4 @@
 
-[data-tryxpath-frame] {
-    outline: dashed thick rgb(255,0,255) !important;
-}
-
 [data-tryxpath-context] {
     outline: dashed thick rgb(0,255,0) !important;
 }
@@ -19,6 +15,7 @@
 [data-tryxpath-element][data-tryxpath-focused] {
     outline: solid thick rgb(0,0,255) !important;
     display: block !important;
+    visibility: visible !important;
     opacity: 1 !important;
 }
 
@@ -26,6 +23,7 @@
 [data-tryxpath-element][data-tryxpath-focused-ancestor] {
     outline: dashed thick rgb(0,255,255) !important;
     display: block !important;
+    visibility: visible !important;
     opacity: 1 !important;
 }
 
@@ -42,4 +40,23 @@
 [data-tryxpath-focused-ancestor="0"],
 [data-tryxpath-element][data-tryxpath-focused-ancestor="0"] {
     outline: dashed thick rgb(0,64,64) !important;
+}
+
+[data-tryxpath-frame] {
+    outline: dashed thick rgb(255,0,255) !important;
+    display: block !important;
+    visibility: visible !important;
+    opacity: 1 !important;
+    position: static !important;
+    min-width: 20px !important;
+    min-height: 20px !important;
+}
+
+[data-tryxpath-frame-ancestor] {
+    display: block !important;
+    visibility: visible !important;
+    opacity: 1 !important;
+    position: static !important;
+    min-width: 20px !important;
+    min-height: 20px !important;
 }
